--- a/index.html
+++ b/index.html
@@ -38,23 +38,31 @@
     <div class="row">
         <div class="col-6 offset-3">
             <form>
-                <div class="form-group  input-sm">
-                    <label for="train-name">Train Name</label>
+                <div class="form-group row input-sm">
+                    <label class="col-2 col-form-label" for="train-name">Train</label>
+                    <div class="col-10">
                     <input class="form-control" id="train-name" placeholder="Train Name">
                 </div>
-                <div class="form-group input-sm ">
-                    <label for="destination">Destination</label>
+                </div>
+                <div class="form-group row input-sm">
+                    <label class="col-2 col-form-label" for="destination">Destination</label>
+                    <div class="col-10">
                     <input class="form-control" id="destination" placeholder="Destination">
                 </div>
-                <div class="form-group ">
-                    <label for="first-train-time">First Departure (HH:mm)</label>
+                </div>
+                <div class="form-group row input-sm">
+                    <label class="col-2 col-form-label" for="first-train-time">Departure</label>
+                    <div class="col-10">
                     <input class="form-control" id="first-train-time" placeholder="First Departure (HH:mm)">
                 </div>
-                <div class="form-group ">
-                    <label for="frequency">Frequency (min)</label>
+                </div>
+                <div class="form-group row input-sm">
+                    <label class="col-2 col-form-label" for="frequency">Frequency</label>
+                    <div class="col-10">
                     <input class="form-control" id="frequency" placeholder="Frequency (min)">
                 </div>
-                <button type="submit" class="btn btn-primary ">Submit</button>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
